--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native": "0.74.5",
     "react-native-bouncy-checkbox": "^4.1.2",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-config": "^1.5.3",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
@@ -48,6 +49,7 @@
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
+    "react-native-dotenv": "^3.4.11",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
